# cpp_projects

./: .gitignore  CMakeLists.txt
Cpp_OOP_Demos/00_pointers/: 1_pointers_basics.cpp  2_references.cpp
Cpp_OOP_Demos/01_basics_stack_heap/: CMakeLists.txt  main.cpp
Cpp_OOP_Demos/02_header_files_guards/: Dog.cpp  Dog.h  main2.cpp
